--- a/lines.html
+++ b/lines.html
@@ -32,7 +32,7 @@
         <h4 class="subtitle">East/South - Arriving every 10 mins</h4>
         </div>
         <div class="arrowright">
-          <img src="Arrow Right.png">
+          <a href="lines_navy pier.html"><img src="Arrow Right.png"></a>
         </div>
       </div>
       <div class="bus">
@@ -42,7 +42,7 @@
         <h4 class="subtitle">South - Arriving every 15 mins</h4>
         </div>
         <div class="arrowright">
-          <img src="Arrow Right.png">
+          <a href="lines_103rd.html"><img src="Arrow Right.png"></a>
         </div>
       </div>
       <div class="bus">
@@ -52,7 +52,7 @@
         <h4 class="subtitle">North - Arriving every 16 mins</h4>
         </div>
         <div class="arrowright">
-          <img src="Arrow Right.png">
+          <a href="lines_devon.html"><img src="Arrow Right.png"></a>
         </div>
       </div>
       <div class="bus">
@@ -62,7 +62,7 @@
         <h4 class="subtitle">East - Arriving every 20 mins</h4>
         </div>
         <div class="arrowright">
-          <img src="Arrow Right.png">
+          <a href="lines_randolph.html"><img src="Arrow Right.png"></a>
         </div>
       </div>
       <div class="bus">
