--- a/lines_navy pier.html
+++ b/lines_navy pier.html
@@ -28,8 +28,8 @@
       </div>
       <div class="bus">
         <div class="content">
-        <h3 class="busline">Michigan & Randolph</h3>
-        <h4 class="subtitle">North</h4>
+        <h3 class="busline1">Michigan & Randolph</h3>
+        <h4 class="subtitle1">North</h4>
         </div>
         <div class="time">
           <h4 class="time">5:12 PM</h4>
@@ -38,8 +38,8 @@
       </div>
       <div class="bus">
         <div class="content">
-        <h3 class="busline">Michigan & South Water</h3>
-        <h4 class="subtitle">North</h4>
+        <h3 class="busline1">Michigan & South Water</h3>
+        <h4 class="subtitle1">North</h4>
         </div>
         <div class="time">
           <h4 class="time">5:14 PM</h4>
@@ -48,8 +48,8 @@
       </div>
      <div class="bus">
         <div class="content">
-        <h3 class="busline">Columbus & E. Wacker</h3>
-        <h4 class="subtitle">North</h4>
+        <h3 class="busline1">Columbus & E. Wacker</h3>
+        <h4 class="subtitle1">North</h4>
         </div>
         <div class="time">
           <h4 class="time">5:17 PM</h4>
@@ -58,8 +58,8 @@
       </div>
       <div class="bus">
         <div class="content">
-        <h3 class="busline">Columbus & North Water</h3>
-        <h4 class="subtitle">North</h4>
+        <h3 class="busline1">Columbus & North Water</h3>
+        <h4 class="subtitle1">North</h4>
         </div>
         <div class="time">
           <h4 class="time">5:19 PM</h4>
@@ -68,8 +68,8 @@
       </div>
       </div><div class="bus">
         <div class="content">
-        <h3 class="busline">Columbus & Illinois</h3>
-        <h4 class="subtitle">North</h4>
+        <h3 class="busline1">Columbus & Illinois</h3>
+        <h4 class="subtitle1">North</h4>
         </div>
         <div class="time">
           <h4 class="time">5:20 PM</h4>
@@ -78,8 +78,8 @@
       </div>
       <div class="bus">
         <div class="content">
-        <h3 class="busline">Illinois & Mcclurg</h3>
-        <h4 class="subtitle">East</h4>
+        <h3 class="busline1">Illinois & Mcclurg</h3>
+        <h4 class="subtitle1">East</h4>
         </div>
         <div class="time">
           <h4 class="time">5:22 PM</h4>
@@ -88,8 +88,8 @@
       </div>
       <div class="bus">
         <div class="content">
-        <h3 class="busline">Illinois & Peshtigo</h3>
-        <h4 class="subtitle">East</h4>
+        <h3 class="busline1">Illinois & Peshtigo</h3>
+        <h4 class="subtitle1">East</h4>
         </div>
         <div class="time">
           <h4 class="time">5:24 PM</h4>
