--- a/lines_navy pier.html
+++ b/lines_navy pier.html
@@ -19,6 +19,7 @@
         <a href="lines.html"><img src="Back Button.png"></a>
       </div>
     <section class="menu">
+      <h1 class="pagetitle">Route</h1>
       <div class="bus">
         <h1 class="busnumber">124</h1>
         <div class="content">
