--- a/lines_navy pier.html
+++ b/lines_navy pier.html
@@ -19,7 +19,6 @@
         <a href="lines.html"><img src="Back Button.png"></a>
       </div>
     <section class="menu">
-      <h1 class="pagetitle">Route</h1>
       <div class="bus">
         <h1 class="busnumber">124</h1>
         <div class="content">
@@ -94,6 +93,15 @@
         </div>
         <div class="time">
           <h4 class="time">5:24 PM</h4>
+        </div>
+        </div>
+      <div class="bus">
+        <div class="content">
+        <h3 class="busline1">Illinois & Lake Shore</h3>
+        <h4 class="subtitle1">East</h4>
+        </div>
+        <div class="time">
+          <h4 class="time">5:26 PM</h4>
         </div>
         </div>
       </div>
