--- a/lines_navy pier.html
+++ b/lines_navy pier.html
@@ -95,6 +95,7 @@
           <h4 class="time">5:24 PM</h4>
         </div>
         </div>
+      </div>
       <div class="bus">
         <div class="content">
         <h3 class="busline1">Illinois & Lake Shore</h3>
