--- a/lines_navy pier.html
+++ b/lines_navy pier.html
@@ -23,7 +23,7 @@
         <h1 class="busnumber">124</h1>
         <div class="content">
         <h3 class="busline">Navy Pier</h3>
-        <h4 class="subtitle">East/South - Arriving every 10 mins</h4>
+        <h4 class="subtitle">Eastbound/Southbound</h4>
         </div>
       </div>
       <div class="bus">
