Remove arrows and edit subtitles

--- a/lines.html
+++ b/lines.html
@@ -29,7 +29,7 @@
         <h1 class="busnumber">124</h1>
         <div class="content">
         <h3 class="busline">Navy Pier</h3>
-        <h4 class="subtitle">East/South - Arriving every 10 mins</h4>
+        <h4 class="subtitle">Eastbound/Southbound</h4>
         </div>
         <div class="arrowright">
           <a href="lines_navy pier.html"><img src="Arrow Right.png"></a>
@@ -39,7 +39,7 @@
         <h1 class="busnumber">J14</h1>
         <div class="content">
         <h3 class="busline">103rd/Stony Island</h3>
-        <h4 class="subtitle">South - Arriving every 15 mins</h4>
+        <h4 class="subtitle">Southbound</h4>
         </div>
         <div class="arrowright">
           <a href="lines_103rd.html"><img src="Arrow Right.png"></a>
@@ -49,7 +49,7 @@
         <h1 class="busnumber">151</h1>
         <div class="content">
         <h3 class="busline">Devon/Clark</h3>
-        <h4 class="subtitle">North - Arriving every 16 mins</h4>
+        <h4 class="subtitle">Northbound</h4>
         </div>
         <div class="arrowright">
           <a href="lines_devon.html"><img src="Arrow Right.png"></a>
@@ -59,7 +59,7 @@
         <h1 class="busnumber">60</h1>
         <div class="content">
         <h3 class="busline">Randolph/Harbor Dr</h3>
-        <h4 class="subtitle">East - Arriving every 20 mins</h4>
+        <h4 class="subtitle">Eastbound</h4>
         </div>
         <div class="arrowright">
           <a href="lines_randolph.html"><img src="Arrow Right.png"></a>
@@ -71,18 +71,12 @@
         <h3 class="busline">Cottage Grove</h3>
         <h4 class="subtitle">Out Of Service until 12:10 AM</h4>
         </div>
-        <div class="arrowright1">
-          <img src="Arrow Right.png">
-        </div>
       </div>
       <div class="bus">
         <h1 class="busnumber">20</h1>
         <div class="content">
         <h3 class="busline">Madison</h3>
         <h4 class="subtitle">Out Of Service until 12:10 AM</h4>
-        </div>
-        <div class="arrowright1">
-          <img src="Arrow Right.png">
         </div>
       </div>
       <div class="bus">
@@ -91,18 +85,12 @@
         <h3 class="busline">Streeterville/Taylor</h3>
         <h4 class="subtitle">Out Of Service until 6:00 AM</h4>
         </div>
-        <div class="arrowright1">
-          <img src="Arrow Right.png">
-        </div>
       </div>
       <div class="bus">
         <h1 class="busnumber">6x</h1>
         <div class="content">
         <h3 class="busline">Jackson Park Express</h3>
         <h4 class="subtitle">Rerouted</h4>
-        </div>
-        <div class="arrowright1">
-          <img src="Arrow Right.png">
         </div>
       </div>
       </body> 
