--- a/lines_103rd.html
+++ b/lines_103rd.html
@@ -58,7 +58,7 @@
       </div>
       <div class="bus">
         <div class="content">
-        <h3 class="busline1">Michigan & Van Buren/Congress</h3>
+        <h3 class="busline1">Michigan & Van Buren</h3>
         <h4 class="subtitle1">South</h4>
         </div>
         <div class="time">
