--- a/arrivals.html
+++ b/arrivals.html
@@ -28,7 +28,7 @@
       <div class="nextarrival">
         <h2>Next Arrival</h2>
       </div>
-      <div class="bus">
+      <a href="lines_navy pier.html"><div class="bus"></a>
         <h1 class="busnumber">124</h1>
         <div class="content">
         <h3 class="busline">Navy Pier</h3>
@@ -41,7 +41,7 @@
       <div class="upcomingarrivals">
         <h2>Upcoming Arrivals</h2>
       </div>
-      <div class="bus1">
+      <a href="lines_103rd.html"><div class="bus1"></a>
         <h1 class="busnumber">J14</h1>
         <div class="content">
         <h3 class="busline">103rd/Stony Island</h3>
@@ -51,7 +51,7 @@
           <h4 class="time">5:15 PM</h4>
         </div>
       </div>
-      <div class="bus1">
+      <a href="lines_devon.html"><div class="bus1"></a>
         <h1 class="busnumber">151</h1>
         <div class="content">
         <h3 class="busline">Devon/Clark</h3>
@@ -61,7 +61,7 @@
           <h4 class="time">5:16 PM</h4>
         </div>
       </div>
-      <div class="bus1">
+      <a href="lines_randolph.html"><div class="bus1"></a>
         <h1 class="busnumber">60</h1>
         <div class="content">
         <h3 class="busline">Randolph/Harbor Dr</h3>
