--- a/arrivals.html
+++ b/arrivals.html
@@ -28,47 +28,47 @@
       <div class="nextarrival">
         <h2>Next Arrival</h2>
       </div>
-      <a href="lines_navy pier.html"><div class="bus"></a>
+      <div class="bus">
         <h1 class="busnumber">124</h1>
         <div class="content">
         <h3 class="busline">Navy Pier</h3>
         <h4 class="subtitle">East/South - Arriving every 10 mins</h4>
         </div>
         <div>
-          <h4 class="time">5:10 PM</h4>
+          <a href="lines_navy pier.html"><h4 class="time">5:10 PM</h4></a>
         </div>
       </div>
       <div class="upcomingarrivals">
         <h2>Upcoming Arrivals</h2>
       </div>
-      <a href="lines_103rd.html"><div class="bus1"></a>
+      <div class="bus1">
         <h1 class="busnumber">J14</h1>
         <div class="content">
         <h3 class="busline">103rd/Stony Island</h3>
         <h4 class="subtitle">South - Arriving every 15 mins</h4>
         </div>
         <div>
-          <h4 class="time">5:15 PM</h4>
+          <a href="lines_103rd.html"><h4 class="time">5:15 PM</h4></a>
         </div>
       </div>
-      <a href="lines_devon.html"><div class="bus1"></a>
+      <div class="bus1">
         <h1 class="busnumber">151</h1>
         <div class="content">
         <h3 class="busline">Devon/Clark</h3>
         <h4 class="subtitle">North - Arriving every 16 mins</h4>
         </div>
         <div>
-          <h4 class="time">5:16 PM</h4>
+          <a href="lines_devon.html"><h4 class="time">5:16 PM</h4></a>
         </div>
       </div>
-      <a href="lines_randolph.html"><div class="bus1"></a>
+      <div class="bus1">
         <h1 class="busnumber">60</h1>
         <div class="content">
         <h3 class="busline">Randolph/Harbor Dr</h3>
         <h4 class="subtitle">East - Arriving every 20 mins</h4>
         </div>
         <div>
-          <h4 class="time">5:20 PM</h4>
+          <a href="lines_randolph.html"><h4 class="time">5:20 PM</h4></a>
         </div>
       </div>
       </body> 
