--- a/arrivals.html
+++ b/arrivals.html
@@ -35,7 +35,7 @@
         <h4 class="subtitle">East/South - Arriving every 10 mins</h4>
         </div>
         <div>
-          <a href="lines_navy pier.html"><h4 class="time">5:10 PM</h4></a>
+          <a href="lines_navy pier_1.html"><h4 class="time">5:10 PM</h4></a>
         </div>
       </div>
       <div class="upcomingarrivals">
@@ -48,7 +48,7 @@
         <h4 class="subtitle">South - Arriving every 15 mins</h4>
         </div>
         <div>
-          <a href="lines_103rd.html"><h4 class="time">5:15 PM</h4></a>
+          <a href="lines_103rd_1.html"><h4 class="time">5:15 PM</h4></a>
         </div>
       </div>
       <div class="bus1">
@@ -58,7 +58,7 @@
         <h4 class="subtitle">North - Arriving every 16 mins</h4>
         </div>
         <div>
-          <a href="lines_devon.html"><h4 class="time">5:16 PM</h4></a>
+          <a href="lines_devon_1.html"><h4 class="time">5:16 PM</h4></a>
         </div>
       </div>
       <div class="bus1">
@@ -68,7 +68,7 @@
         <h4 class="subtitle">East - Arriving every 20 mins</h4>
         </div>
         <div>
-          <a href="lines_randolph.html"><h4 class="time">5:20 PM</h4></a>
+          <a href="lines_randolph_1.html"><h4 class="time">5:20 PM</h4></a>
         </div>
       </div>
       </body> 
