Delete search bar

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>BusyBus Line List</title>
+  <title>BusyBus</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
@@ -14,9 +14,6 @@
       </div>
       <div class="map">
         <img src="Washington and State 1.png">
-      </div>
-      <div class="searchbar">
-        <img src="Search Bar.png">
       </div>
     <section class="menu">
       <div class="segmentedcontrols-col1">
