--- a/arrivals.html
+++ b/arrivals.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>BusyBus Line List</title>
+  <title>BusyBus Arrivals</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style_arrivals.css">
