--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       <div class="map">
         <img src="Washington and State 1.png">
       </div>
+      <div class="buttons">
+        <img src="Buttons.png">
+      </div>
     <section class="menu">
       <div class="segmentedcontrols-col1">
         <a href="stops.html">Stops</a>
