--- a/stops.html
+++ b/stops.html
@@ -18,6 +18,9 @@
       <div class="backbutton">
         <a href="index.html"><img src="Back Button.png"></a>
       </div>
+      <div class="buttons">
+        <img src="Buttons.png">
+      </div>
     <section class="menu">
       <div class="segmentedcontrols-col1">
         <a href="stops.html">Stops</a>
