--- a/lines_navy pier_1.html
+++ b/lines_navy pier_1.html
@@ -18,6 +18,9 @@
       <div class="backbutton">
         <a href="arrivals.html"><img src="Back Button.png"></a>
       </div>
+      <div class="buttons">
+        <img src="Buttons.png">
+      </div>
     <section class="menu">
       <div class="bus">
         <h1 class="busnumber">124</h1>
